[dialer] Code format